--- a/Mobile/View/LoginPage.xaml
+++ b/Mobile/View/LoginPage.xaml
@@ -12,9 +12,9 @@
   </BasePage.Resources>
 
   <AbsoluteLayout Opacity="1">
-    <ContentView BackgroundColor="#9d231c" Opacity="0.8" VerticalOptions="StartAndExpand" HorizontalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="All"
-                 AbsoluteLayout.LayoutBounds="0,0,1,0.30" HeightRequest="100">
-        <Image Source="logo.png"></Image>
+    <ContentView Opacity="1" VerticalOptions="StartAndExpand" HorizontalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="All"
+                 AbsoluteLayout.LayoutBounds="0,0,1,0.30" HeightRequest="45" WidthRequest="142">
+        <Image Source="logo-login.png" WidthRequest="142" HeightRequest="45" ></Image>
     </ContentView>
     <StackLayout Spacing="0" Padding="50" VerticalOptions="Center" HorizontalOptions="Center" AbsoluteLayout.LayoutFlags="PositionProportional"
                        AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1" HeightRequest="50" WidthRequest="200">
@@ -27,16 +27,19 @@
         </Grid.RowDefinitions>
         <StackLayout Grid.Row="0" Grid.Column="0" Spacing="0">
           <StackLayout VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="330" Orientation="Horizontal">
-           <Image Source="leads.png" WidthRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
+           <Image Source="user.png" WidthRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
            <local:MyEntry Opacity="0.5" Placeholder="Login" Text="{Binding Login.Email}" WidthRequest="200" HeightRequest="40" TextColor="#FFF"/>
           </StackLayout>
           <StackLayout VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="330" Orientation="Horizontal">
-           <Image Source="leads.png" WidthRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
+           <Image Source="key.png" WidthRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
            <local:MyEntry Opacity="0.5" Placeholder="Senha" Text="{Binding Login.Password}" IsPassword="true" WidthRequest="200" HorizontalOptions="StartAndExpand" HeightRequest="40" TextColor="#FFF"/>
           </StackLayout>
           <!--<local:MyEntry Opacity="0.5" Placeholder="Senha" Text="{Binding Login.Password}" IsPassword="true" WidthRequest="200" HeightRequest="40" TextColor="#FFF"/>-->
         </StackLayout>
-        <Button Grid.Row="1" Grid.Column="0" Text="Fazer Login" TextColor="White" BackgroundColor="#9d231c" Command="{Binding LoginCommand}" IsEnabled="{Binding NotIsBusy}"></Button>
+        <StackLayout Grid.Row="1" Grid.Column="0" >
+            <Button Text="Fazer Login" TextColor="White" AbsoluteLayout.LayoutFlags="PositionProportional"
+                       AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1" BackgroundColor="#9d231c" Command="{Binding LoginCommand}" IsEnabled="{Binding NotIsBusy}"></Button>
+        </StackLayout>
       </Grid>
     </StackLayout>
     <ContentView x:Name="actIndBackground"
