--- a/Mobile/View/LoginPage.xaml
+++ b/Mobile/View/LoginPage.xaml
@@ -16,16 +16,9 @@
                  AbsoluteLayout.LayoutBounds="0,0,1,0.30" HeightRequest="45" WidthRequest="142">
         <Image Source="logo-login.png" WidthRequest="142" HeightRequest="45" ></Image>
     </ContentView>
-    <StackLayout Spacing="0" Padding="50" VerticalOptions="Center" HorizontalOptions="Center" AbsoluteLayout.LayoutFlags="PositionProportional"
+    <StackLayout Padding="50" VerticalOptions="Center" HorizontalOptions="Center" AbsoluteLayout.LayoutFlags="PositionProportional"
                        AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1" HeightRequest="50" WidthRequest="200">
-      <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-        <Grid.RowDefinitions>
-          <RowDefinition Height="90" />
-          <RowDefinition Height="35" />
-          <RowDefinition Height="35" />
-          <RowDefinition Height="35" />
-        </Grid.RowDefinitions>
-        <StackLayout Grid.Row="0" Grid.Column="0" Spacing="0">
+        <StackLayout>
           <StackLayout VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="330" Orientation="Horizontal">
            <Image Source="user.png" WidthRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
            <local:MyEntry Opacity="0.5" Placeholder="Login" Text="{Binding Login.Email}" WidthRequest="200" HeightRequest="40" TextColor="#FFF"/>
@@ -36,11 +29,10 @@
           </StackLayout>
           <!--<local:MyEntry Opacity="0.5" Placeholder="Senha" Text="{Binding Login.Password}" IsPassword="true" WidthRequest="200" HeightRequest="40" TextColor="#FFF"/>-->
         </StackLayout>
-        <StackLayout Grid.Row="1" Grid.Column="0" >
-            <Button Text="Fazer Login" TextColor="White" AbsoluteLayout.LayoutFlags="PositionProportional"
-                       AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1" BackgroundColor="#9d231c" Command="{Binding LoginCommand}" IsEnabled="{Binding NotIsBusy}"></Button>
-        </StackLayout>
-      </Grid>
+    </StackLayout>
+    <StackLayout AbsoluteLayout.LayoutFlags="PositionProportional"
+              AbsoluteLayout.LayoutBounds="0.5,0.8,-1,-1" Padding="40">
+      <Button Text="Fazer Login" TextColor="White" WidthRequest="230"  BackgroundColor="#9d231c" Command="{Binding LoginCommand}"></Button>
     </StackLayout>
     <ContentView x:Name="actIndBackground"
                  BackgroundColor="#222222" Opacity="0.5"
