--- a/Mobile/View/MenuPage.xaml
+++ b/Mobile/View/MenuPage.xaml
@@ -1,6 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <BasePage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+              xmlns:local="clr-namespace:Mobile.Helper;assembly=Mobile"
              x:Class="Mobile.View.MenuPage">
-  <Button Text="Entrar" TextColor="White" BackgroundColor="#5ec8de" Command="{Binding AboutCommand}"></Button>
+  <!--<Button Text="Entrar" TextColor="White" BackgroundColor="#5ec8de" Command="{Binding AboutCommand}" HeightRequest="40"></Button>-->
+  <AbsoluteLayout Opacity="1">
+    <ContentView Opacity="1" VerticalOptions="StartAndExpand" HorizontalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="All"
+                 AbsoluteLayout.LayoutBounds="0,0,1,0.30" HeightRequest="5" WidthRequest="142">
+      <Label Text="Afrig News" TextColor="White" FontSize="15"></Label>
+    </ContentView>
+    <local:MenuListView local:MenuListView.ListItemTappedCommand="{Binding AboutCommand}">
+      <local:MenuListView.ItemTemplate>
+        <DataTemplate>
+          <ViewCell>
+            <StackLayout BackgroundColor="Red"
+            Orientation="Vertical">
+              <StackLayout Orientation="Horizontal">
+                <Image Source="{Binding IconSource}" />
+                <Label Text="{Binding Title}"
+                TextColor="White" />
+              </StackLayout>
+            </StackLayout>
+          </ViewCell>
+        </DataTemplate>
+      </local:MenuListView.ItemTemplate>
+    </local:MenuListView>
+  </AbsoluteLayout>
 </BasePage>
