--- a/Mobile/View/MainPage.xaml
+++ b/Mobile/View/MainPage.xaml
@@ -4,7 +4,7 @@
           xmlns:Controls="clr-namespace:Mobile.Helper"
           xmlns:XlabsControls="clr-namespace:XLabs.Forms.Controls;assembly=XLabs.Forms"
           xmlns:local="clr-namespace:Mobile.View"
-          x:Class="Mobile.View.MainPage" Title="Descubra">
+          x:Class="Mobile.View.MainPage">
   <BasePage.Resources>
     <ResourceDictionary>
       <Style x:Key="SearchStyle" TargetType="SearchBar">
@@ -13,35 +13,30 @@
     </ResourceDictionary>
   </BasePage.Resources>
   <BasePage.ToolbarItems>
-    <ToolbarItem Name="Menu1" Icon="Map" Command="{Binding IconbarCommand}"/>
+    <!--<ToolbarItem Name="Menu1" Icon="logo"/>-->
   </BasePage.ToolbarItems>
   <AbsoluteLayout>
-    <StackLayout Orientation="Vertical">
-      <SearchBar Placeholder="Procurar por evento ou localidade." VerticalOptions="Start" Style="{StaticResource SearchStyle}" SearchCommand="{Binding SearchCommand}" Text="{Binding SearchItem,Mode=TwoWay}" />
-      <!--<XlabsControls:ButtonGroup x:Name="bgButton" ViewBackgroundColor="#c8c8cd" VerticalOptions="Start" HorizontalOptions="CenterAndExpand" >
-    </XlabsControls:ButtonGroup>
-      <Controls:InfiniteListView x:Name="listViews" ItemsSource="{Binding Items}" VerticalOptions="Start" LoadMoreCommand="{Binding LoadMoreCommand}" IsLoading="{Binding IsLoading}">-->
-      <Controls:InfiniteListView x:Name="listViews" VerticalOptions="Start"> 
+      <Controls:InfiniteListView x:Name="listViews" VerticalOptions="StartAndExpand" ItemsSource="{Binding Items}" LoadMoreCommand="{Binding LoadMoreCommand}" AbsoluteLayout.LayoutFlags="All"
+                 AbsoluteLayout.LayoutBounds="0,0,1,1" Controls:MenuListView.ListItemTappedCommand="{Binding DetailsCommand}"> 
         <Controls:InfiniteListView.ItemTemplate>
           <DataTemplate>
-            <!--<ViewCell>
-              <StackLayout BackgroundColor="#eee"
+            <ViewCell>
+              <StackLayout BackgroundColor="#eeeeee"
               Orientation="Vertical">
                 <StackLayout Orientation="Horizontal">
-                  <Label Text="{Binding nome}"
-                  TextColor="#f35e20"/>
-                  <Label Text="{Binding adrress}"
-                    TextColor="#f35e20" />
-                  <Label Text="{Binding cidade}"
-                    TextColor="#f35e20" />
+                  <Image Source="{Binding image}" HeightRequest="65" WidthRequest="85" />
+                  <Grid>
+                    <Label Grid.Row="0" Text="{Binding title}"
+                    TextColor="#9a9a9a" FontSize="12"/>
+                    <Label Grid.Row="1" Text="{Binding date}"
+                      TextColor="#fa121a" FontSize="9" />
+                  </Grid>
                 </StackLayout>
               </StackLayout>
-            </ViewCell>-->
-              <local:AccordionCell IsSelected="{Binding Path=IsSelected}" />
+            </ViewCell>
           </DataTemplate>
         </Controls:InfiniteListView.ItemTemplate>
       </Controls:InfiniteListView >
-    </StackLayout>
     <ContentView x:Name="actIndBackground"
                  BackgroundColor="#222222" Opacity="0.5"
                  AbsoluteLayout.LayoutFlags="All"
