--- a/Mobile/View/MenuPage.xaml
+++ b/Mobile/View/MenuPage.xaml
@@ -2,19 +2,19 @@
 <BasePage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
               xmlns:local="clr-namespace:Mobile.Helper;assembly=Mobile"
-             x:Class="Mobile.View.MenuPage">
+             x:Class="Mobile.View.MenuPage" BackgroundColor="Red">
   <!--<Button Text="Entrar" TextColor="White" BackgroundColor="#5ec8de" Command="{Binding AboutCommand}" HeightRequest="40"></Button>-->
   <AbsoluteLayout Opacity="1">
     <ContentView Opacity="1" VerticalOptions="StartAndExpand" HorizontalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="All"
-                 AbsoluteLayout.LayoutBounds="0,0,1,0.30" HeightRequest="20" WidthRequest="142">
+                 AbsoluteLayout.LayoutBounds="0,0,1,0.30" HeightRequest="20" WidthRequest="142" BackgroundColor="Red">
       <Label Text="Afrig News" TextColor="White" FontSize="15"></Label>
     </ContentView>
-    <StackLayout Padding="20">
+    <StackLayout Padding="20" HorizontalOptions="FillAndExpand">
     	<!--<StackLayout.Padding>
     		<OnPlatform x:TypeArguments="Thickness" Android="20 20 20 20" />
-    	</StackLayout.Padding>-->
-	    <local:MenuListView local:MenuListView.ListItemTappedCommand="{Binding AboutCommand}">
-	      <local:MenuListView.ItemTemplate>
+    	</StackLayout.Padding>--> 
+	    <local:MenuListView local:MenuListView.ListItemTappedCommand="{Binding AboutCommand}" HeightRequest="170" WidthRequest="199">
+	      <local:MenuListView.ItemTemplate> 
 	        <DataTemplate>
 	          <ViewCell>
 	            <StackLayout BackgroundColor="Red"
