--- a/Mobile/View/MainPage.xaml
+++ b/Mobile/View/MainPage.xaml
@@ -13,11 +13,10 @@
     </ResourceDictionary>
   </BasePage.Resources>
   <BasePage.ToolbarItems>
-    <ToolbarItem Name="Menu1" Icon="Map" Command="{Binding IconbarCommand}"/>
+    <ToolbarItem Name="Menu1" Icon="Add_Icon" Command="{Binding IconbarCommand}"/>
   </BasePage.ToolbarItems>
   <AbsoluteLayout>
     <StackLayout Orientation="Vertical">
-      <SearchBar Placeholder="Procurar por evento ou localidade." VerticalOptions="Start" Style="{StaticResource SearchStyle}" SearchCommand="{Binding SearchCommand}" Text="{Binding SearchItem,Mode=TwoWay}" />
       <!--<XlabsControls:ButtonGroup x:Name="bgButton" ViewBackgroundColor="#c8c8cd" VerticalOptions="Start" HorizontalOptions="CenterAndExpand" >
     </XlabsControls:ButtonGroup>
       <Controls:InfiniteListView x:Name="listViews" ItemsSource="{Binding Items}" VerticalOptions="Start" LoadMoreCommand="{Binding LoadMoreCommand}" IsLoading="{Binding IsLoading}">-->
