--- a/Mobile/View/AboutPage.xaml
+++ b/Mobile/View/AboutPage.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<BasePage xmlns="http://xamarin.com/schemas/2014/forms"
+<local:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+		xmlns:local="clr-namespace:Mobile.View"
           x:Class="Mobile.View.AboutPage">
   <StackLayout>
     <Label Text="Ola oijiosjoi jisjdo jsoijdojs odijosj dijs odjisjiodjso" />
   </StackLayout>
-</BasePage>
+</local:BasePage>
