--- a/Mobile/View/LoginPage.xaml
+++ b/Mobile/View/LoginPage.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<BasePage xmlns="http://xamarin.com/schemas/2014/forms"
+<local:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+		  OnAppearingCommand="{Binding LoadMoreCommand}"
+		  xmlns:local="clr-namespace:Mobile.View"
           x:Class="Mobile.View.LoginPage">
 
 		<Grid>
@@ -83,4 +85,4 @@
 		                       IsVisible="{Binding IsBusy}" />
 			</RelativeLayout>
 	</Grid>
-</BasePage>
+</local:BasePage>
