--- a/Mobile/View/SimulateAddPage.xaml
+++ b/Mobile/View/SimulateAddPage.xaml
@@ -4,7 +4,7 @@
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
 		     xmlns:telerikInput="clr-namespace:Telerik.XamarinForms.Input;assembly=Telerik.XamarinForms.Input"
              x:Class="Mobile.SimulateAddPage">
-<StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand" Padding="20, 20, 20, 20">
+<StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand" Padding="0, 0, 0, 20" HeightRequest="300">
     <StackLayout BackgroundColor="White" Padding="0, 10, 0, 0">
       <Label Text="Cadastrar Projeção" TextColor="Gray" FontSize="20" HorizontalOptions="Center"></Label>
       <ScrollView>
@@ -15,7 +15,7 @@
 			      <RowDefinition/>
 			      <RowDefinition Height="Auto"/>
 			    </Grid.RowDefinitions>
-			    <telerikInput:≈  x:Name="dataForm" Source="{Binding}"/>
+			    <telerikInput:RadDataForm  x:Name="dataForm" Source="{Binding}"/>
 			    <Button  Grid.Row="1" Clicked="CommitButtonButtonClicked" Text="Commit"/>
 			  </Grid>
           </StackLayout>
