--- a/Mobile/View/SimulateAddPage.xaml
+++ b/Mobile/View/SimulateAddPage.xaml
@@ -2,12 +2,13 @@
 <pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
+		     xmlns:local="clr-namespace:Mobile"
 		     xmlns:telerikInput="clr-namespace:Telerik.XamarinForms.Input;assembly=Telerik.XamarinForms.Input"
              x:Class="Mobile.SimulateAddPage">
-<StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand" Padding="0, 0, 0, 20" HeightRequest="300">
+<StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand" HeightRequest="350">
     <StackLayout BackgroundColor="White" Padding="0, 10, 0, 0">
       <Label Text="Cadastrar Projeção" TextColor="Gray" FontSize="20" HorizontalOptions="Center"></Label>
-      <ScrollView>
+      <ScrollView HeightRequest="300">
         <StackLayout>
           <StackLayout Orientation="Horizontal">
 			  <Grid>
@@ -15,8 +16,19 @@
 			      <RowDefinition/>
 			      <RowDefinition Height="Auto"/>
 			    </Grid.RowDefinitions>
-			    <telerikInput:RadDataForm  x:Name="dataForm" Source="{Binding}"/>
-			    <Button  Grid.Row="1" Clicked="CommitButtonButtonClicked" Text="Commit"/>
+					<TableView Intent="Form">
+								<TableRoot>
+									<TableSection Title="Nome">
+										<EntryCell Text="" />
+									</TableSection>
+									<TableSection Title="Indexador">
+										<EntryCell Text="" Keyboard="Numeric"/>
+									</TableSection>
+									<TableSection Title="Data Fim Aplicação">
+										<local:DateCell />
+									</TableSection>
+								</TableRoot>
+							</TableView>		
 			  </Grid>
           </StackLayout>
           <Button Text="Close" Clicked="OnClose"></Button>
