--- a/Mobile/View/MenuPage.xaml
+++ b/Mobile/View/MenuPage.xaml
@@ -2,6 +2,14 @@
 <local:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 		     xmlns:local="clr-namespace:Mobile.View"
+			 xmlns:telerikInput="clr-namespace:Telerik.XamarinForms.Input;assembly=Telerik.XamarinForms.Input"
              x:Class="Mobile.View.MenuPage">
-  <Button Text="Entrar" TextColor="White" BackgroundColor="#5ec8de" Command="{Binding AboutCommand}"></Button>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition/>
+      <RowDefinition Height="Auto"/>
+    </Grid.RowDefinitions>
+    <telerikInput:RadDataForm  x:Name="dataForm" Source="{Binding}"/>
+    <Button  Grid.Row="1" Text="Commit"/>
+  </Grid>
 </local:BasePage>
